# ErikaBot

./: .env.dev  .env.prod  .gitignore  README.md  anas.db  baidu_translate.json  bot.py  db.json  pyproject.toml  test.py  text.html  twitter.db
db/: data.xls  rss.db
docs/: QuickStart.md  ToolList.md
src/: twitter.db
src/plugins/: erika.py  help.py  timer.py
src/plugins/GroupBQB/: __init__.py  data_source.py
src/plugins/my_oreo/: __init__.py  oreo.py
src/plugins/nonebot_plugin_guild_patch/: __init__.py
src/plugins/rand_pic/: __init__.py
src/plugins/rss_helper/: RSS.py  __init__.py  biliDynamic.py  biliLive.py  biliRender.py  config.json  config.py  rss_tool.py
src/plugins/rss_helper/templates/: dynamic.html  live.html
src/plugins/their_ana/: __init__.py  model.py
src/plugins/twitter_helper/: __init__.py  config.py  data_source.py  model.py
utils/: BatchProcess.py  HtmlTag.py  QImage.py
