[tool.poetry]
name = "ErikaBot"
version = "1.1.0"
description = "A tencent QQ robot"
authors = ["SlieFamily <sliewdyinwhite@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
nb-cli = "^0.6.9"
selenium = "^4.1.3"
nonebot-adapter-onebot = "^2.2.3"
opencv-python = "^4.5.5"
nonebot-plugin-guild-patch = "^0.1.3"
nonebot-plugin-apscheduler = "^0.3.0"
requests = "^2.31.0"
feedparser = "^6.0.10"
nonebot2 = {extras = ["fastapi"], version = "^2.0.1"}
nonebot-plugin-send-anything-anywhere = "^0.2.7"
xlrd = "^2.0.1"
pyquery = "^2.0.0"
bilibili-api-python = "^17.4.1"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.nonebot]
plugins = ["nonebot_plugin_guild_patch"]
plugin_dirs = ["src/plugins"]

[nonebot.plugins]
plugin_dirs = ["src/plugins"]
